--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">Nayara.sully</div>
         <nav>
             <ul>
-                <li><a href="inicio.html">Início</a></li>
+                <li><a href="index.html">Início</a></li>
                 <li><a href="sobre.html">Sobre Mim</a></li>
                 <li><a href="habilidades.html">Habilidades</a></li>
                 <li><a href="portfolio.html">Portfólio</a></li>
